--- a/config/debug.yaml
+++ b/config/debug.yaml
@@ -1,14 +1,14 @@
 
-#_meta.script_name: add
-_meta.script_name: dedupe
+_meta.script_name: add
+#_meta.script_name: dedupe
 
 
-#db-path: data/demo.db
-#path: data/demo
+db-path: data/demo.db
+path: data/demo
 
 
-db-path: data/largetest.db
-path: "D:\\Trust\\"
+#db-path: data/largetest.db
+#path: "D:\\Trust\\"
 
 
 #pbar: no
